--- a/docker-compose-onbuild.yml
+++ b/docker-compose-onbuild.yml
@@ -2,14 +2,11 @@ version: '2'
 
 services:
   web:
-    build: .
-    command: nodemon --debug=5858
+    image: node:onbuild
     ports:
      - "8080:8080"
-     - "5858:5858"
     environment:
      - MONGO_HOST=mongo
-    volumes:
      - .:/src
   mongo:
     image: mongo:latest
