--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,10 +1,14 @@
-version: '2'
+version: '3.1'
 
 services:
+  proxy:
+    image: nginx:1.11 # this will use the latest version of 1.11.x
+    ports:
+      - '80:80' # expose 80 on host and sent to 80 in container
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
   web:
     image: bretfisher/nodemongoapp
-    ports:
-     - "8080:8080"
     environment:
      - MONGO_HOST=mongo
   mongo:
